# heroes-system

./: README.md
code/heroesapigateway/: .classpath  .gitignore  .project  Dockerfile  HELP.md  build.gradle
code/heroesauthorizationserver/: .gitignore  .project  Dockerfile  build.gradle
code/heroesbattletypeservice/: build.gradle  settings.gradle
code/heroescompanyservice/: build.gradle  settings.gradle
code/heroesconfigserver/: Dockerfile  build.gradle
code/heroescontentcreator/: .project  Dockerfile
code/heroesentityservice/: build.gradle  (+1 more)
code/sample/heroesstatsmanagerservice/: Dockerfile  pyproject.toml
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/app/: app.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/model/human/: human.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/: sampleoop.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/datetime/: sampledatetime.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/financialtimeseries/: sample_financial_timeseries.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/json/: samplejson.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/math/: samplemath.py
code/sample/heroesstatsmanagerservice/heroesstatsmanagerservice/util/matplotlib/: samplematplotlib.py  samplematplotlib_interactive.py
docker/: docker-compose.yaml
documentation/: heroes-overview.drawio  microservices-overview.drawio
eclipse-launch/: HeroescontentcreatorApplication.launch
(+481 files in other folders)
