[tool.poetry]
name = "heroesstatsmanagerservice"
version = "0.1.0"
description = ""
authors = ["Petar Jeremic <jpetar765@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pyqt6 = "^6.7.1"
flask = "^3.0.3"
cufflinks = "^0.17.3"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
